Add: Get Comments API
